@@ -12,8 +12,7 @@ import net.runelite.client.plugins.microbot.moonsofperil.enums.Widgets;
 import net.runelite.client.plugins.microbot.moonsofperil.MoonsOfPerilConfig;
 import net.runelite.client.plugins.microbot.util.Rs2InventorySetup;
 import net.runelite.client.plugins.microbot.util.combat.Rs2Combat;
-import net.runelite.client.plugins.microbot.util.npc.Rs2Npc;
-import net.runelite.client.plugins.microbot.util.npc.Rs2NpcModel;
+import net.runelite.client.plugins.microbot.api.npc.models.Rs2NpcModel;
 import net.runelite.client.plugins.microbot.util.player.Rs2Player;
 import net.runelite.client.plugins.microbot.util.prayer.Rs2Prayer;
 import net.runelite.client.plugins.microbot.util.walker.Rs2Walker;
@@ -70,28 +69,24 @@ public class BlueMoonHandler implements BaseHandler {
             BreakHandlerScript.setLockState(true);
             boss.walkToBoss(equipmentNormal, bossName, bossLobbyLocation);
             boss.fightPreparation(equipmentNormal);
-            boss.changeAttackStyle("Crush");
             boss.enterBossArena(bossName, bossStatueObjectID, bossLobbyLocation);
-            sleepUntil(() -> Rs2Widget.isWidgetVisible(bossHealthBarWidgetID), 5_000);
+            sleepUntil(() -> Rs2Widget.isWidgetVisible(bossHealthBarWidgetID),5_000);
         }
         int bossNpcID = NpcID.PMOON_BOSS_BLUE_MOON_VIS;
-        while (Rs2Widget.isWidgetVisible(bossHealthBarWidgetID) || Rs2Npc.getNpc(bossNpcID) != null) {
+        while (Rs2Widget.isWidgetVisible(bossHealthBarWidgetID) || Microbot.getRs2NpcCache().query().withId(bossNpcID).nearest() != null) {
             if (isSpecialAttack1Sequence()) {
                 specialAttack1Sequence();
-            } else if (isSpecialAttack2Sequence()) {
-                if (!this.disableGlacierDodge) {
-                    specialAttack2Sequence(this.cfg);
-                } else {
-                    specialAttack2IdleSequence();
-                }
-            } else if (net.runelite.client.plugins.microbot.moonsofperil.handlers.BossHandler.isNormalAttackSequence(sigilNpcID)) {
+            }
+            else if (isSpecialAttack2Sequence()) {
+                if (!this.disableGlacierDodge) { specialAttack2Sequence(this.cfg);}
+                else {specialAttack2IdleSequence();}
+            }
+            else if (net.runelite.client.plugins.microbot.moonsofperil.handlers.BossHandler.isNormalAttackSequence(sigilNpcID)) {
                 boss.normalAttackSequence(sigilNpcID, bossNpcID, ATTACK_TILES, equipmentNormal);
             }
             sleep(300);
         }
-        if (debugLogging) {
-            Microbot.log("The " + bossName + "boss health bar widget is no longer visible, the fight must have ended.");
-        }
+        if (debugLogging) {Microbot.log("The " + bossName + "boss health bar widget is no longer visible, the fight must have ended.");}
         Rs2Prayer.disableAllPrayers();
         sleep(2400);
         Rs2Prayer.disableAllPrayers();
@@ -104,37 +99,31 @@ public class BlueMoonHandler implements BaseHandler {
      * Returns True if the tornado NPC is found.
      */
     public boolean isSpecialAttack1Sequence() {
-        return (Rs2Npc.getNpc(NpcID.PMOON_BOSS_WINTER_STORM) != null && Rs2Widget.isWidgetVisible(bossHealthBarWidgetID) && Rs2Npc.getNpc(sigilNpcID) == null);
+        return (Microbot.getRs2NpcCache().query().withId(NpcID.PMOON_BOSS_WINTER_STORM).nearest() != null && Rs2Widget.isWidgetVisible(bossHealthBarWidgetID) && Microbot.getRs2NpcCache().query().withId(sigilNpcID).nearest() == null);
     }
 
-    public void specialAttack1Sequence() {
+    public void specialAttack1Sequence()
+    {
         sleep(2_400);
         Rs2Prayer.disableAllPrayers();
-        if (debugLogging) {
-            Microbot.log("Running to safe tile and waiting out the sequence");
-        }
+        if (debugLogging) {Microbot.log("Running to safe tile and waiting out the sequence");}
         Rs2Walker.walkFastCanvas(AFTER_TORNADO, true);
         boss.eatIfNeeded();
         boss.drinkIfNeeded();
-        if (debugLogging) {
-            Microbot.log("Sleeping until the special attack sequence is over");
-        }
-        sleepUntil(() -> Rs2Npc.getNpc(sigilNpcID) != null || !Rs2Widget.isWidgetVisible(bossHealthBarWidgetID), 35_000);
+        if (debugLogging) {Microbot.log("Sleeping until the special attack sequence is over");}
+        sleepUntil(() -> Microbot.getRs2NpcCache().query().withId(sigilNpcID).nearest() != null || !Rs2Widget.isWidgetVisible(bossHealthBarWidgetID), 35_000);
     }
 
-    public void specialAttack2IdleSequence() {
+    public void specialAttack2IdleSequence()
+    {
         sleep(2_400);
         Rs2Prayer.disableAllPrayers();
-        if (debugLogging) {
-            Microbot.log("Running to safe tile and waiting out the sequence");
-        }
+        if (debugLogging) {Microbot.log("Running to safe tile and waiting out the sequence");}
         Rs2Walker.walkFastCanvas(AFTER_GLACIER, true);
         boss.eatIfNeeded();
         boss.drinkIfNeeded();
-        if (debugLogging) {
-            Microbot.log("Sleeping until the special attack sequence is over");
-        }
-        sleepUntil(() -> Rs2Npc.getNpc(sigilNpcID) != null || !Rs2Widget.isWidgetVisible(bossHealthBarWidgetID), 35_000);
+        if (debugLogging) {Microbot.log("Sleeping until the special attack sequence is over");}
+        sleepUntil(() -> Microbot.getRs2NpcCache().query().withId(sigilNpcID).nearest() != null || !Rs2Widget.isWidgetVisible(bossHealthBarWidgetID), 35_000);
     }
 
 
@@ -142,33 +131,28 @@ public class BlueMoonHandler implements BaseHandler {
      * Returns True if the icicle NPC is found.
      */
     public boolean isSpecialAttack2Sequence() {
-        Rs2NpcModel icicle = Rs2Npc.getNpc(NpcID.PMOON_BOSS_ICICLE_UNCRACKED);
-        Rs2NpcModel sigil = Rs2Npc.getNpc(sigilNpcID);
+        Rs2NpcModel icicle = Microbot.getRs2NpcCache().query().withId(NpcID.PMOON_BOSS_ICICLE_UNCRACKED).nearest();
+        Rs2NpcModel sigil = Microbot.getRs2NpcCache().query().withId(sigilNpcID).nearest();
         if (icicle != null && sigil == null) {
-            if (debugLogging) {
-                Microbot.log("An icicle has spawned – We've entered Special Attack 2 Sequence");
-            }
+            if (debugLogging) {Microbot.log("An icicle has spawned – We've entered Special Attack 2 Sequence");}
             return true;
         }
         return false;
     }
 
-    /**
-     * Blue Moon – Special Attack 2  (“weapon-freeze / icicle smash”)
-     */
-    public void specialAttack2Sequence(MoonsOfPerilConfig cfg) {
-        final int ICICLE_NPC_ID = NpcID.PMOON_BOSS_ICICLE_UNCRACKED;
-        final int ICICLE_ANIM_ID = AnimationID.VFX_DJINN_BLUE_ICE_BLOCK_IDLE_02;
-        final long POLL_TIMEOUT_MS = 5_000;
+    /**  Blue Moon – Special Attack 2  (“weapon-freeze / icicle smash”)  */
+    public void specialAttack2Sequence(MoonsOfPerilConfig cfg)
+    {
+        final int  ICICLE_NPC_ID    = NpcID.PMOON_BOSS_ICICLE_UNCRACKED;
+        final int  ICICLE_ANIM_ID   = AnimationID.VFX_DJINN_BLUE_ICE_BLOCK_IDLE_02;
+        final long POLL_TIMEOUT_MS  = 5_000;
         final long PHASE_TIMEOUT_MS = 32_000;
-        final WorldPoint SAFE_SPOT = new WorldPoint(1440, 9681, 0);
+        final WorldPoint SAFE_SPOT  = new WorldPoint(1440, 9681, 0);
 
         java.util.function.Supplier<String> ts =
                 () -> "[" + System.currentTimeMillis() + "] ";
 
-        if (debugLogging) {
-            Microbot.log(ts.get() + "specialAttack2Sequence() START");
-        }
+        if (debugLogging) {Microbot.log(ts.get() + "specialAttack2Sequence() START");}
         Rs2Walker.walkFastCanvas(bossArenaCenter, true);
 
         /* ---------- 1. Identify the animated icicle ----------------------- */
@@ -176,18 +160,17 @@ public class BlueMoonHandler implements BaseHandler {
         long pollStart = System.currentTimeMillis();
 
         while (isSpecialAttack2Sequence() && matches.isEmpty() &&
-                System.currentTimeMillis() - pollStart < POLL_TIMEOUT_MS) {
-            matches = Rs2Npc.getNpcs(n ->
+                System.currentTimeMillis() - pollStart < POLL_TIMEOUT_MS)
+        {
+            matches = Microbot.getRs2NpcCache().query().where(n ->
                             n.getId() == ICICLE_NPC_ID &&
-                                    n.getAnimation() == ICICLE_ANIM_ID)
-                    .collect(Collectors.toList());
+                                    n.getNpc().getAnimation() == ICICLE_ANIM_ID)
+                    .toList();
             if (matches.isEmpty()) sleep(300);
         }
 
         if (matches.isEmpty()) {
-            if (debugLogging) {
-                Microbot.log(ts.get() + "Timed-out waiting for animated icicle — aborting");
-            }
+            if (debugLogging) {Microbot.log(ts.get() + "Timed-out waiting for animated icicle — aborting");}
             return;
         }
         if (!isSpecialAttack2Sequence()) {
@@ -195,71 +178,52 @@ public class BlueMoonHandler implements BaseHandler {
         }
 
         Rs2NpcModel icicle = matches.get(0);
-        if (debugLogging) {
-            Microbot.log(ts.get() + "Icicle found at " + icicle.getWorldLocation());
-        }
+        if (debugLogging) {Microbot.log(ts.get() + "Icicle found at " + icicle.getWorldLocation());}
 
         /* ---------- 2. Attack + dodge loop ------------------------------- */
 
         long phaseStart = System.currentTimeMillis();
 
-        if (debugLogging) {
-            Microbot.log(ts.get() + "Entering attack-and-dodge loop (timeout " + PHASE_TIMEOUT_MS + " ms)");
-        }
+        if (debugLogging) {Microbot.log(ts.get() + "Entering attack-and-dodge loop (timeout " + PHASE_TIMEOUT_MS + " ms)");}
         Rs2Prayer.disableAllPrayers();
 
         Rs2InventorySetup invSetup = equipmentNormal;
         while (!invSetup.doesEquipmentMatch() &&
-                System.currentTimeMillis() - phaseStart < PHASE_TIMEOUT_MS) {
+                System.currentTimeMillis() - phaseStart < PHASE_TIMEOUT_MS)
+        {
             if (!Rs2Combat.inCombat()) {
-                Rs2Npc.attack(icicle);
+                icicle.click("Attack");
             }
             WorldPoint attackTile = Rs2Player.getWorldLocation();
-            if (debugLogging) {
-                Microbot.log(ts.get() + "Attack location calculated as: " + attackTile);
-            }
-            sleepUntil(() -> net.runelite.client.plugins.microbot.moonsofperil.handlers.BossHandler.inDanger(attackTile) || invSetup.doesEquipmentMatch(), 3_000);
+            if (debugLogging) {Microbot.log(ts.get() + "Attack location calculated as: " + attackTile);}
+            sleepUntil(() -> net.runelite.client.plugins.microbot.moonsofperil.handlers.BossHandler.inDanger(attackTile) || invSetup.doesEquipmentMatch(),3_000);
             if (invSetup.doesEquipmentMatch()) {
                 break;
             }
             if (net.runelite.client.plugins.microbot.moonsofperil.handlers.BossHandler.inDanger(attackTile)) {
-                if (debugLogging) {
-                    Microbot.log(ts.get() + "Standing on dangerous tile: " + attackTile);
-                }
+                if (debugLogging) {Microbot.log(ts.get() + "Standing on dangerous tile: " + attackTile);}
                 WorldPoint safeTile = Rs2Tile.getSafeTiles(1).get(0);
-                if (debugLogging) {
-                    Microbot.log(ts.get() + "Safe tile calculated to be: " + safeTile);
-                }
+                if (debugLogging) {Microbot.log(ts.get() + "Safe tile calculated to be: " + safeTile);}
 
                 if (safeTile != null) {
                     Rs2Walker.walkFastCanvas(safeTile, true);
-                    if (debugLogging) {
-                        Microbot.log(ts.get() + "Now standing on safe tile: " + safeTile);
-                    }
+                    if (debugLogging) {Microbot.log(ts.get() + "Now standing on safe tile: " + safeTile);}
                     sleepUntil(() -> !BossHandler.inDanger(attackTile));
-                    if (debugLogging) {
-                        Microbot.log(ts.get() + "Attack tile now calculated as safe: " + attackTile);
-                    }
+                    if (debugLogging) {Microbot.log(ts.get() + "Attack tile now calculated as safe: " + attackTile);}
                 }
             }
         }
 
         /* ---------- 3. Retreat to safespot ------------------------------- */
-        if (debugLogging) {
-            Microbot.log(ts.get() + "Retreating to SAFE_SPOT " + SAFE_SPOT);
-        }
+        if (debugLogging) {Microbot.log(ts.get() + "Retreating to SAFE_SPOT " + SAFE_SPOT);}
         Rs2Walker.walkFastCanvas(SAFE_SPOT, true);
         boss.eatIfNeeded();
         boss.drinkIfNeeded();
 
-        if (debugLogging) {
-            Microbot.log(ts.get() + "Waiting for all icicles to despawn…");
-        }
-        sleepUntil(() -> Rs2Npc.getNpc(ICICLE_NPC_ID) == null);
+        if (debugLogging) {Microbot.log(ts.get() + "Waiting for all icicles to despawn…");}
+        sleepUntil(() -> Microbot.getRs2NpcCache().query().withId(ICICLE_NPC_ID).nearest() == null);
 
-        if (debugLogging) {
-            Microbot.log(ts.get() + "specialAttack2Sequence() COMPLETE");
-        }
+        if (debugLogging) {Microbot.log(ts.get() + "specialAttack2Sequence() COMPLETE");}
     }
 
 }
